// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentMethods renders correctly after add STORJ and cancel click 1`] = `
<div class="payment-methods-area">
  <div class="payment-methods-area__functional-area extended">
    <div class="payment-methods-area__functional-area__top-container">
      <h1 aria-roledescription="title" class="payment-methods-area__functional-area__title">Payment Method</h1>
      <div class="payment-methods-area__functional-area__button-area">
        <div class="payment-methods-area__functional-area__button-area__cancel">
          <p class="payment-methods-area__functional-area__button-area__cancel__text">Cancel</p>
        </div>
      </div>
    </div>
    <div class="payments-bonus-container payment-methods-area__functional-area__bonus"><svg class="banner-logo-svg"></svg>
      <div class="payments-bonus-container__text-container">
        <p class="payments-bonus-container__text-container__main-text">
          Get free credits for paying in STORJ Token
        </p>
        <p class="payments-bonus-container__text-container__additional-text">
          Deposit STORJ Token to your account and receive a 10% bonus, or $10 for every $100.
        </p>
      </div>
    </div>
    <div class="add-storj-area">
      <div class="add-storj-area__selection-container">
        <p class="add-storj-area__selection-container__label">Deposit STORJ Tokens via Coin Payments</p>
        <div class="form-container add-storj-area__selection-container__form">
          <div class="selected-container">
            <div class="selected-container__label-container">
              <p class="selected-container__label-container__label">USD $10</p>
              <div class="selected-container__label-container__svg"><svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                  <path fill-rule="evenodd" clip-rule="evenodd" d="M0.372773 0.338888C0.869804 -0.112963 1.67565 -0.112963 2.17268 0.338888L7 4.72741L11.8273 0.338888C12.3243 -0.112963 13.1302 -0.112963 13.6272 0.338888C14.1243 0.790739 14.1243 1.52333 13.6272 1.97519L7 8L0.372773 1.97519C-0.124258 1.52333 -0.124258 0.790739 0.372773 0.338888Z" fill="#2683FF"></path>
                </svg></div>
            </div>
          </div>
          <!---->
          <!---->
          <!---->
        </div>
      </div>
      <div class="add-storj-area__submit-area">
        <!---->
        <div class="confirm-add-storj-button container" style="width: 251px; height: 48px; border-radius: 6px; font-size: 16px;">
          <!---->
          <!---->
          <!----> <span class="label">Continue to Coin Payments</span>
        </div>
      </div>
    </div>
    <!---->
    <!---->
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`PaymentMethods renders correctly after add STORJ and cancel click 2`] = `
<div class="payment-methods-area">
  <div class="payment-methods-area__functional-area">
    <div class="payment-methods-area__functional-area__top-container">
      <h1 aria-roledescription="title" class="payment-methods-area__functional-area__title">Payment Method</h1>
      <div class="payment-methods-area__functional-area__button-area">
        <div class="payment-methods-area__functional-area__button-area__default-buttons">
          <div class="add-storj-button container blue-white" style="width: 123px; height: 46px; border-radius: 6px; font-size: 16px;">
            <!---->
            <!---->
            <!----> <span class="label">Add STORJ</span>
          </div>
        </div>
      </div>
    </div>
    <div class="payments-bonus-container payment-methods-area__functional-area__bonus"><svg class="banner-gift-svg"></svg>
      <div class="payments-bonus-container__text-container">
        <p class="payments-bonus-container__text-container__main-text">
          Add a Payment Method to Get Started
        </p>
        <p class="payments-bonus-container__text-container__additional-text">
          Your first 150GB are free. You will not be charged until you use more than 150GB.
        </p>
      </div>
    </div>
    <!---->
    <!---->
    <div class="add-card-button">
      <!---->
      <!----> <span>Add Card</span>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`PaymentMethods renders correctly after add card and cancel click 1`] = `
<div class="payment-methods-area">
  <div class="payment-methods-area__functional-area reduced">
    <div class="payment-methods-area__functional-area__top-container">
      <h1 aria-roledescription="title" class="payment-methods-area__functional-area__title">Payment Method</h1>
      <div class="payment-methods-area__functional-area__button-area">
        <div class="payment-methods-area__functional-area__button-area__cancel">
          <p class="payment-methods-area__functional-area__button-area__cancel__text">Cancel</p>
        </div>
      </div>
    </div>
    <!---->
    <!---->
    <addcardform-stub></addcardform-stub>
    <div class="add-card-button button-moved">
      <!---->
      <!----> <span>Add Card</span>
    </div>
  </div>
  <div class="payment-methods-area__security-info-container">
    <lockimage-stub></lockimage-stub> <span class="payment-methods-area__security-info-container__info">
            Your card is secured by Stripe through TLS and AES-256 encryption. Your information is secure.
        </span>
  </div>
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`PaymentMethods renders correctly after add card and cancel click 2`] = `
<div class="payment-methods-area">
  <div class="payment-methods-area__functional-area">
    <div class="payment-methods-area__functional-area__top-container">
      <h1 aria-roledescription="title" class="payment-methods-area__functional-area__title">Payment Method</h1>
      <div class="payment-methods-area__functional-area__button-area">
        <div class="payment-methods-area__functional-area__button-area__default-buttons">
          <vbutton-stub label="Add STORJ" width="123px" height="46px" fontsize="16px" borderradius="6px" isbluewhite="true" onpress="[Function]" class="add-storj-button"></vbutton-stub>
        </div>
      </div>
    </div>
    <paymentsbonus-stub class="payment-methods-area__functional-area__bonus"></paymentsbonus-stub>
    <!---->
    <!---->
    <div class="add-card-button">
      <!---->
      <!----> <span>Add Card</span>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`PaymentMethods renders correctly with card 1`] = `
<div class="payment-methods-area">
  <div class="payment-methods-area__functional-area">
    <div class="payment-methods-area__functional-area__top-container">
      <h1 aria-roledescription="title" class="payment-methods-area__functional-area__title">Payment Method</h1>
      <div class="payment-methods-area__functional-area__button-area">
        <div class="payment-methods-area__functional-area__button-area__default-buttons">
          <div class="add-storj-button container blue-white" style="width: 123px; height: 46px; border-radius: 6px; font-size: 16px;">
            <!---->
            <!---->
            <!----> <span class="label">Add STORJ</span>
          </div>
        </div>
      </div>
    </div>
    <div class="payments-bonus-container payment-methods-area__functional-area__bonus"><svg class="banner-logo-svg"></svg>
      <div class="payments-bonus-container__text-container">
        <p class="payments-bonus-container__text-container__main-text">
          Get free credits for paying in STORJ Token
        </p>
        <p class="payments-bonus-container__text-container__additional-text">
          Deposit STORJ Token to your account and receive a 10% bonus, or $10 for every $100.
        </p>
      </div>
    </div>
    <!---->
    <!---->
    <div class="add-card-button">
      <!---->
      <!----> <span>Add Card</span>
    </div>
  </div>
  <!---->
  <!---->
  <div class="payment-methods-area__existing-cards-container">
    <div class="payment-methods-container__card-container">
      <div class="payment-methods-container__card-container__info-area">
        <div class="payment-methods-container__card-container__info-area__card-logo"><svg></svg></div>
        <div class="payment-methods-container__card-container__info-area__info-container"><img src="@/../static/images/payments/cardStars.png" alt="Hidden card digits stars image">
          <h1 class="bold">0000</h1>
        </div>
        <div class="payment-methods-container__card-container__info-area__expire-container">
          <h2 class="medium">Expires</h2>
          <h1 class="bold">12/2100</h1>
        </div>
      </div>
      <div class="payment-methods-container__card-container__button-area">
        <div class="payment-methods-container__card-container__default-button">
          <p class="payment-methods-container__card-container__default-button__label">Default</p>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`PaymentMethods renders correctly without card 1`] = `
<div class="payment-methods-area">
  <div class="payment-methods-area__functional-area">
    <div class="payment-methods-area__functional-area__top-container">
      <h1 aria-roledescription="title" class="payment-methods-area__functional-area__title">Payment Method</h1>
      <div class="payment-methods-area__functional-area__button-area">
        <div class="payment-methods-area__functional-area__button-area__default-buttons">
          <div class="add-storj-button container blue-white" style="width: 123px; height: 46px; border-radius: 6px; font-size: 16px;">
            <!---->
            <!---->
            <!----> <span class="label">Add STORJ</span>
          </div>
        </div>
      </div>
    </div>
    <div class="payments-bonus-container payment-methods-area__functional-area__bonus"><svg class="banner-gift-svg"></svg>
      <div class="payments-bonus-container__text-container">
        <p class="payments-bonus-container__text-container__main-text">
          Add a Payment Method to Get Started
        </p>
        <p class="payments-bonus-container__text-container__additional-text">
          Your first 150GB are free. You will not be charged until you use more than 150GB.
        </p>
      </div>
    </div>
    <!---->
    <!---->
    <div class="add-card-button">
      <!---->
      <!----> <span>Add Card</span>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;
